# ocl_benchmark

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.h
